<resources>
    <string name="app_name">Лёгкая аренда</string>
    <string name="app_version" translatable="false">1.6.0</string>

    <string name="def_room_name">ЖК Самый Лучший</string>
    <string name="def_room_address">Жилинская, д.12, кв.159</string>
    <string name="def_status">Свободно</string>
    <string name="hint_room_name">Название</string>
    <string name="hint_room_address">Адрес</string>
    <string name="new_room">Новое помещение</string>
    <string name="rooms_list">Список помещений</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="empty_address">Адрес не заполнен</string>
    <string name="def_date_representation">22 сентября, 12:00</string>
    <string name="def_time_representation" translatable="false">12:00</string>
    <string name="check_in">Заселение</string>
    <string name="check_out">Выселение</string>
    <string name="check_in_date">Дата</string>
    <string name="check_in_time" translatable="false">14:00</string>
    <string name="was_check_in">Подтверждено</string>
    <string name="check_out_date">Дата</string>
    <string name="check_out_time" translatable="false">12:00</string>
    <string name="was_check_out">Подтверждено</string>
    <string name="def_guest_name">Спиридон Красносельский</string>
    <string name="guest_name">Имя</string>
    <string name="guests_count">Всего:</string>
    <string name="sum">Сумма договорная</string>
    <string name="payment">Оплачено</string>
    <string name="def_sum">2500</string>
    <string name="reserve">Бронирование</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="question_delete_reserve">Удалить бронирование?</string>
    <string name="question_delete_room">Будут удалены все бронирования по этому помещению! Продолжить?</string>
    <string name="people_abbr">чел.</string>
    <string name="def_currency_symbol">₽</string>
    <string name="reserves_list_is_empty">Пока что нет ни одного бронирования</string>
    <string name="status_free">Свободно</string>
    <string name="status_busy">Занято</string>
    <string name="status_on_repair">Ремонт</string>
    <string name="status_until">до</string>
    <string name="enter_room_name">Введите название!</string>
    <string name="enter_guest_name">Укажите имя постояльца!</string>
    <string name="enter_guests_count">Укажите количество постояльцев!</string>
    <string name="checkin_after_checkout">Заселение позже выселения!</string>
    <string name="enter_checkout_time">Выберите время выселения!</string>
    <string name="enter_checkout_date">Выберите дату выселения!</string>
    <string name="enter_checkin_time">Выберите время заселения!</string>
    <string name="enter_checkin_date">Выберите дату заселения!</string>
    <string name="enter_cost_date">Выберите дату!</string>
    <string name="enter_cost_sum">Введите сумму!</string>
    <string name="open">Открыть</string>
    <string name="def_free_reserve_text">Свободно с 25 июля по 12 августа</string>
    <string name="status_free_from">с</string>
    <string name="status_free_to">по</string>
    <string name="status_free_on"></string>
    <string name="settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="rooms">Помещения</string>
    <string name="pref_dont_show_address_title">Не отображать адрес</string>
    <string name="pref_dont_show_address_summary">в карточке помещения</string>
    <string name="pref_use_addresses_title">Адреса</string>
    <string name="pref_use_addresses_summary">Вводить информацию об адресах помещений</string>
    <string name="pref_dont_show_free_reserves_title">Не отображать окна</string>
    <string name="pref_dont_show_free_reserves_summary">между бронированиями в списке</string>
    <string name="bookings">Бронирования</string>
    <string name="application">Приложение</string>
    <string name="pref_app_version_title">Версия</string>
    <string name="archive">Архив</string>
    <string name="old_reserves_analyse_depth_title">Дней до отправки в архив</string>
    <string name="old_reserves_analyse_depth_summary">Помещать бронирование в архив через выбранное число дней после завершения. По умолчанию - 30 дней. Если 0, то сразу после завершения бронирование будет помещено в архив.</string>
    <string name="go_to_archive">Перейти в архив</string>
    <string name="replace_to_archive">Переместить в архив</string>
    <string name="this_room">Это помещение</string>
    <string name="in_the_archive">в архиве</string>
    <string name="replace_from_archive">Вернуть из архива</string>
    <string name="pref_complete_criteria_was_check_out">произошло выселение</string>
    <string name="pref_complete_criteria_was_paid">полностью оплачено</string>
    <string name="pref_complete_criteria_title">Считать завершенным когда:</string>
    <string name="select_all">Отметить все</string>
    <string name="pref_auto_checkin_checkout_title">Автоматически подтверждать</string>
    <string name="pref_auto_checkin_checkout_summary">заселение и выселение при наступлении планового времени</string>
    <string name="def_phone_number" translatable="false">+7 999 123-45-67</string>
    <string name="phone_number_hint" translatable="false">+Х ХХХ ХХХ-ХХ-ХХ</string>
    <string name="finally_reserve_delete_message">Бронирование будет безвозвратно удалено! Продолжить?</string>
    <string name="finally_reserves_delete_message">Выбранные брони будут безвозвратно удалены! Продолжить?</string>
    <string name="attach_file">Прикрепить файл</string>
    <string name="camera_capture_photo">Фото с камеры</string>
    <string name="gallery_image">Фото из галереи</string>
    <string name="local_file">Файл с диска</string>
    <string name="def_files_count" translatable="false">99</string>
    <string name="guests">Постояльцы</string>
    <string name="picture">Изображение</string>
    <string name="def_ext_file_name" translatable="false">IMG_202105262598_1122156.jpg</string>
    <string name="delete_file">Удалить файл</string>
    <string name="from_year_beginning">С начала года</string>
    <string name="from_month_beginning">С начала месяца</string>
    <string name="from_prev_month_beginning">С начала пред. месяца</string>
    <string name="chosen_period">Произвольный период</string>
    <string name="for_all_time">За все время</string>
    <string name="stat_sum_header">Сумма:</string>
    <string name="statistic_payment_header">Оплачено:</string>
    <string name="def_reserves_count" translatable="false">17</string>
    <string name="statistic_days_header">Занято дней:</string>
    <string name="def_days_count" translatable="false">11</string>
    <string name="def_stat_guests_count" translatable="false">26</string>
    <string name="statistic_guests_header">Постояльцев:</string>
    <string name="statistic">Статистика</string>
    <string name="my_guest">Мой гость</string>
    <string name="costs">Расходы</string>
    <string name="statistic_costs_header">Расходы:</string>
    <string name="def_cost_date_representation">22.09.2021</string>
    <string name="cost_item_internet">Интернет, ТВ и медиа</string>
    <string name="cost_item_other">Прочее</string>
    <string name="cost_item_repair">Ремонт</string>
    <string name="cost_item_communal_services">ЖКХ</string>
    <string name="cost_item">Статья расходов</string>
    <string name="description">Описание</string>
    <string name="new_costs">Новые расходы</string>
    <string name="empty_sum" translatable="false">0</string>
    <string name="enter_cost_item">Выберите статью расходов!</string>
    <string name="select_cost_item">Выберите статью расходов</string>
    <string name="cost_item_name_hint">Название</string>
    <string name="enter_cost_item_name">Введите название!</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="increase_sum_by">Увеличить сумму на</string>
    <string name="decrease_sum_by">Уменьшить сумму на</string>
    <string name="statistic_reserves_header">Бронирований:</string>


</resources>