<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.EditRoomFragment">

    <EditText
        android:id="@+id/room_change_name"
        android:hint="@string/hint_room_name"
        style="@style/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/room_change_address"
        style="@style/edit_text"
        android:hint="@string/hint_room_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_change_name" />

    <TextView
        android:id="@+id/room_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/room_change_address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/def_status"
        />
</androidx.constraintlayout.widget.ConstraintLayout>