<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/recycle_view_item">

    <TextView
        android:id="@+id/costs_list_cost_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_small_margin"
        android:text="Интернет, ТВ и медиа"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/costs_list_cost_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/app_small_margin"
        android:layout_marginBottom="@dimen/app_margin"
        android:text="@string/def_cost_date_representation"
        android:textColor="@color/grey"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costs_list_cost_name"
        app:layout_goneMarginTop="@dimen/app_small_margin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/costs_list_group_sums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/costs_list_currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_small_margin"
            android:text="@string/def_currency_symbol"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/costs_list_sum"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/costs_list_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/chek_margin"
            android:text="@string/def_sum"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
